--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,7 +10,8 @@
 body{
 	background: url(../images/nh-trip.jpg);
 	background-repeat: no-repeat; 
-	background-size: cover;
+	background-size: 100%;
+	background-color: black;
 	height: 100%;
 	width: 100%;
 	position: absolute;
@@ -57,7 +58,7 @@ body{
 	position: relative;
 	width: 400px;
 	margin: auto;
-	top: 50%;
+	top: 40%;
 	background-color: white;
 	opacity: 0.7;
 	text-align: center;
