--- a/static/css/index.css
+++ b/static/css/index.css
@@ -63,7 +63,7 @@ body{
 	opacity: 0.7;
 	text-align: center;
 	padding: 15px;
-	border: 1px solid white;
+	border: 1px solid black;
 	border-radius: 6px;
 }
 #handle-div a{
