--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,53 +3,75 @@
 /*  Mass Reset */
 *{ margin: 0; padding: 0; border: 0; 
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-	color: #074659;
 	list-style-type: none;
 	text-decoration: none;
+}
+
+a:hover {
+	cursor: pointer;
 }
 
 html {
 	height: 100%;
 	width: 100%;
+	background-color: black;
+	color: gainsboro;
 }
 body {
 	height: 100%;
-	padding: 1em;
+}
+
+#top-bar {
+	width: 100%;
+	height: 15px;
+	background-color: azure;
+	position: fixed;
 }
 
 #content {
-	height: 85%;
+	padding: 4em;
 }
 
+h1 {
+	padding: 40px 0;
+	font-size: 3em;
+}
 
-#handle-div{
-	position: relative;
-	width: auto;
-	max-width: 400px;
-	margin: auto;
-	top: 40%;
-	opacity: 0.7;
-	text-align: center;
-	padding: 1em;
-	font-size: 1.3em;
+#content p {
+	color: gainsboro;
+}
+#content img {
+	height: 20px;
+	width: 20px;
+	margin-left: 10px;
+}
+#content p a {
+	color: gainsboro;
+	border-bottom: 1px solid white;
+}
+
+p {
+	padding: 0.4em 0;
+	font-size: 1.2em;
+}
+
+#handle-div p{
+	color: gray;
+	font-size: 1em;
+}
+#handle-div p:hover {
+	color: gainsboro;
+}
+
+#handle-div img {
+	margin-left: 0;
+	margin-right: 10px;
 }
 @media (max-width: 700px) {
-	#handle-div{
-		font-size: 1em;
+	#content {
+		padding: 1.4em;
 	}
-}
-#handle-div a{
-	display: block;
-}
-#handle-div p{
-	display: inline-block;
-	margin-top: 8px;
-	vertical-align: top;
-}
-#handle-div img{
-	height: 40px;
-}
-#github-handle{padding-top: 10px;}
-#github-icon{
-	vertical-align: middle;
+	#handle-div p{
+		font-size: 0.7em;
+	}
 }
