--- a/static/css/index.css
+++ b/static/css/index.css
@@ -107,13 +107,30 @@ p {
 	color: white;
 	text-decoration: underline;
 }
-.side-hack-container iframe, .side-hack-container video {
+.side-hack-container .iframe-container,
+.side-hack-container video {
 	display: block;
 	width: 440px;
 }
-.side-hack-container iframe {
+.iframe-container iframe {
+	width: 100%;
+	height: 100%;
+}
+.side-hack-container .iframe-container {
 	background: white;
-	height: 400px;
+	height: 400px !important;
+}
+
+#writing-list li {
+	display: block;
+	margin: 10px 0;
+	list-style-type: circle;
+
+}
+#writing-list li a {
+	color: azure;
+	display: inline-block;
+	text-decoration: underline;
 }
 
 
@@ -126,10 +143,10 @@ p {
 		font-size: 0.7em;
 	}
 
-	.side-hack-container iframe, .side-hack-container video {
+	.side-hack-container .iframe-container, .side-hack-container video {
 		width: 300px;
 	}
-	.side-hack-container iframe {
-		height: 250px;
+	.side-hack-container .iframe-container {
+		height: 250px !important;
 	}
 }
