--- a/static/css/index.css
+++ b/static/css/index.css
@@ -108,7 +108,8 @@ p {
 	text-decoration: underline;
 }
 .side-hack-container iframe,
-.side-hack-container video {
+.side-hack-container video,
+.side-hack-container #love-bot-img {
 	display: block;
 	width: 440px;
 }
@@ -116,6 +117,10 @@ p {
 	background: white;
 	height: 400px !important;
 	overflow: scroll;
+}
+.side-hack-container #love-bot-img {
+	height: auto;
+	margin: 0;
 }
 
 #writing-list li {
@@ -141,7 +146,8 @@ p {
 	}
 
 	.side-hack-container iframe,
-	.side-hack-container video {
+	.side-hack-container video,
+	.side-hack-container #love-bot-img {
 		width: 300px;
 	}
 	.side-hack-container iframe {
