--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,8 +1,10 @@
 /* COLOR: #074659 */
 
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,500,600,700');
+
 /*  Mass Reset */
 *{ margin: 0; padding: 0; border: 0; 
-	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	font-family: 'Lato', sans-serif;
 	list-style-type: none;
 	text-decoration: none;
 }
@@ -21,13 +23,6 @@ body {
 	height: 100%;
 }
 
-/*#top-bar {
-	width: 100%;
-	height: 15px;
-	background-color: azure;
-	position: fixed;
-}*/
-
 section {
 	width: 100%;
 }
@@ -37,6 +32,7 @@ section#side-hacks {
 	border-top: 15px solid azure;
 }
 section#side-hacks,
+section#talks,
 section#writing {
 	background-color: white;
 }
@@ -56,6 +52,8 @@ section#general-info .content p {
 }
 
 section#side-hacks a,
+section#talks a,
+section#talks li,
 section#writing a {
 	color: darkslategray;
 }
@@ -66,8 +64,18 @@ section#side-hacks .name a,
 section#writing p,
 section#writing h2,
 section#writing h3,
-section#writing li {
+section#writing li,
+section#talks p,
+section#talks h2,
+section#talks h3 {
 	color: black;
+}
+
+#talks li {
+	margin: 5px 0;
+}
+#talks a {
+	text-decoration: underline;
 }
 
 hr {
