--- a/static/css/index.css
+++ b/static/css/index.css
@@ -183,8 +183,7 @@ iframe#bikeswarm-youtube {
 	overflow: scroll;
 }
 
-.side-hack-container #love-bot-img,
-.side-hack-container #mit-press-2020-cover {
+.side-hack-container .hack-img {
 	height: auto;
 	margin: 0;
 	display: block;
